fix: masthead spacing

--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -11,6 +11,9 @@
   animation-delay: 0.15s;
   z-index: 20;
 
+/* fix-masthead-spacing addition */
+  margin-bottom: 0.5rem;
+
   &__inner-wrap {
     @include clearfix;
     margin-left: auto;
